Fixes: no movement on border change, respond to hovers, border radius, text alignment

--- a/client/web/src/enterprise/code-monitoring/components/CodeMonitorForm.scss
+++ b/client/web/src/enterprise/code-monitoring/components/CodeMonitorForm.scss
@@ -10,18 +10,32 @@
         }
 
         &--button {
+            margin-top: calc(16px - 1px);
+            margin-bottom: calc(16px - 1px);
+            margin-left: -1px;
+            margin-right: -1px;
+            border-radius: 4px;
+
             &:hover {
+                margin-left: -2px;
+                margin-right: -2px;
+                margin-top: calc(16px - 2px);
+                margin-bottom: calc(16px - 2px);
                 border: 2px solid #329af0;
             }
 
             .create-monitor-page__trigger--disabled & {
+                margin: 1rem 0;
                 &:hover {
+                    margin: 1rem 0;
                     border: 1px solid var(--border-color);
                 }
             }
 
             .create-monitor-page__actions--disabled & {
+                margin: 1rem 0;
                 &:hover {
+                    margin: 1rem 0;
                     border: 1px solid var(--border-color);
                 }
             }
